--- a/.github/workflows/image-builder.yaml
+++ b/.github/workflows/image-builder.yaml
@@ -2,11 +2,8 @@
 name: "Building Shopping Application Image"
 
 on:
-  push:
-    branches:
-      - master
-      - main
-
+ 
+ workflow_dispatch: 
 jobs:
   image-build-job:
     name: "Build AMI with Packer"
